# Lumacryte

./: .gitignore  NOTICE  PRIVACY  README.md  buildozer.spec  lumacryte.spec  main.kv  main.py  pyproject.toml  requirements.txt  tools_dev.py
data/: settings.json
releases/windows/data/: .gitignore
releases/windows/resources/: .gitignore
releases/windows/resources/atlas/: ghost_textures.atlas  map_textures.atlas
releases/windows/resources/maps/: test_cave.txt
resources/atlas/: ghost_textures.atlas  map_textures.atlas
resources/kivy/: world_explorer.kv
screens/: __init__.py  collection.py  game_over.py  menu.py  settings.py
tools/: tools_constants.py  tools_effect.py  tools_map.py  tools_world_explorer.py
