
[build-system]
# requires = ["kivymd==1.1.1", "Pillow==9.5.0", "Kivy==2.1.0"]
build-backend = "buildozer"

[tool.pylint]
recursive= "y"
load-plugins = "pylint_report"
ignore-patterns = ["draft*","venv"]

    [tool.pylint.basic]
    # Add names that will always be accepted by pylint
    good-names = ["i", "j", "k", "x", "y", "_"]

    [tool.pylint.reports]
    output-format = "pylint_report.CustomJsonReporter"
    reports = "y"

[tool.pytest.ini_options]
addopts = "--ignore=.buildozer --cov-report html:reports/coverage --cov-report xml --cov"

